--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
         Ab, nostrum corporis officia doloremque sit quis at!</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus nihil beatae fugit? Ad deleniti unde quasi, 
         assumenda harum sequi soluta, voluptas incidunt consequuntur enim perspiciatis mollitia, quibusdam laudantium distinctio iste.</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
